// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertLink renders 1`] = `
<StyledLink
  openInNewTab={false}
  priority="warning"
  size="normal"
  to="/settings/accounts/notifications"
  withoutMarginBottom={false}
>
  <AlertLinkText>
    This is an external link button
  </AlertLinkText>
  <IconLink>
    <IconChevron
      direction="right"
    />
  </IconLink>
</StyledLink>
`;

exports[`AlertLink renders with icon 1`] = `
<StyledLink
  openInNewTab={false}
  priority="warning"
  size="normal"
  to="/settings/accounts/notifications"
  withoutMarginBottom={false}
>
  <IconWrapper>
    <IconMail />
  </IconWrapper>
  <AlertLinkText>
    This is an external link button
  </AlertLinkText>
  <IconLink>
    <IconChevron
      direction="right"
    />
  </IconLink>
</StyledLink>
`;
